<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.srbd.simplecalculator.MainActivity">

    <EditText
        android:id="@+id/operand_one_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/operand_one_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/operand_two_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/operand_two_hint"
        android:inputType="numberDecimal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/operation_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAdd"
            android:text="@string/add_operation" />

        <Button
            android:id="@+id/operation_sub_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/operation_add_button"
            android:layout_toRightOf="@+id/operation_add_button"
            android:onClick="onSub"
            android:text="@string/sub_operation" />

        <Button
            android:id="@+id/operation_div_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/operation_add_button"
            android:onClick="onDiv"
            android:text="@string/div_operation" />

        <Button
            android:id="@+id/operation_mul_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/operation_sub_button"
            android:layout_toEndOf="@+id/operation_div_button"
            android:layout_toRightOf="@+id/operation_div_button"
            android:onClick="onMul"
            android:text="@string/mul_operation" />
    </RelativeLayout>

    <TextView
        android:id="@+id/operation_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp" />

</LinearLayout>
